--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -32,7 +34,69 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.search-box {
+  height: 100vh;
+  width: 400px;
+  background-color: bisque;
+
+}
+
+.search-bar {
+  margin-top: 20px;
+  width: 80%;
+  height: 40px;
+  border-radius: 0px 0px 16px 16px;
+  
+  padding: 10px;
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+  background-color: rgb(245, 245, 239);
+  font-size: 18px;
+  box-shadow: 0px 5px rgb(223, 223, 217);
+}
+.location-box .location{
+  color: black;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgb(165, 159, 152);
+}
+.location{
+
+}
+.date{
+  color: black;
+  font-size: 30px;
+  font-weight: 350;
+  text-align: center;
+  text-shadow: 3px 3px rgb(165, 159, 152);
+}
+.weather-box{
+text-align: center;
+}
+.temp{
+  position: relative;
+  display: inline-block;
+  margin: 30px auto;
+  background-color: rgba(141, 137, 132, 0.5);
+  border-radius: 16px;
+  padding: 15px 15px;
+  color: aliceblue;
+  font-size: 102px;
+  font-weight: 900;
+  box-shadow: 3px 6px rgb(172, 168, 163);
+}
+.weather{
+  color: #fff;
+  font-size: 48px;
+  font-weight: 700;
+  text-shadow: 3px 3px rgb(172, 168, 163);
 }
