--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
   height: 100vh;
   width: 400px;
   background-color: bisque;
-
+  background-image: url('./asset/background.jpg');
 }
 
 .search-bar {
@@ -52,28 +52,28 @@
   width: 80%;
   height: 40px;
   border-radius: 0px 0px 16px 16px;
-  
+ 
   padding: 10px;
   appearance: none;
   background: none;
   border: none;
   outline: none;
-  background-color: rgb(245, 245, 239);
+  background-color: rgba(245, 245, 239, 0.363);
   font-size: 18px;
-  box-shadow: 0px 5px rgb(223, 223, 217);
+  box-shadow: 0px 5px rgba(223, 223, 217, 0.548);
 }
 .location-box .location{
-  color: black;
+  color: rgb(255, 255, 255);
   font-size: 32px;
   font-weight: 500;
   text-align: center;
-  text-shadow: 3px 3px rgb(165, 159, 152);
+  
 }
 .location{
 
 }
 .date{
-  color: black;
+  color: rgb(245, 245, 245);
   font-size: 30px;
   font-weight: 350;
   text-align: center;
@@ -100,3 +100,8 @@ text-align: center;
   font-weight: 700;
   text-shadow: 3px 3px rgb(172, 168, 163);
 }
+
+::placeholder {
+  color: #fff;
+  opacity: 1; /* Firefox */
+};
