--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@
   width: 80%;
   height: 40px;
   border-radius: 0px 0px 16px 16px;
- 
+ color: #fff;
   padding: 10px;
   appearance: none;
   background: none;
@@ -104,4 +104,15 @@ text-align: center;
 ::placeholder {
   color: #fff;
   opacity: 1; /* Firefox */
-};
+}
+.search-button {
+  width: 80%;
+  height: 50px;
+  background-color: rgb(47, 47, 218);
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  font-size: 25px;
+}
