--- a/src/App.css
+++ b/src/App.css
@@ -108,11 +108,11 @@ text-align: center;
 .search-button {
   width: 80%;
   height: 50px;
-  background-color: rgb(47, 47, 218);
+  background-color: rgba(255, 255, 255, 0.801);
   margin-top: 20px;
   padding: 10px;
   border-radius: 5px;
   border: none;
-  color: #fff;
+  color: rgb(0, 0, 0);
   font-size: 25px;
 }
