--- a/src/App.css
+++ b/src/App.css
@@ -115,4 +115,17 @@ text-align: center;
   border: none;
   color: rgb(0, 0, 0);
   font-size: 25px;
+  cursor: pointer;
+  box-shadow: 0px 5px rgba(223, 223, 217, 0.548);
+  transform: translateY(4px);
+  outline: none;
+}
+.search-button:hover {
+  background-color: #eef0ee
+}
+
+.search-button:active {
+  background-color: #376a8b;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
