--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@
   font-size: 30px;
   font-weight: 350;
   text-align: center;
-  text-shadow: 3px 3px rgb(165, 159, 152);
+ text-shadow: 1px 1px rgb(165, 159, 152);
 }
 .weather-box{
 text-align: center;
@@ -119,6 +119,7 @@ text-align: center;
   box-shadow: 0px 5px rgba(223, 223, 217, 0.548);
   transform: translateY(4px);
   outline: none;
+  margin-bottom: 10px;
 }
 .search-button:hover {
   background-color: #eef0ee
