--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,7 @@ text-align: center;
   font-weight: 900;
   display: flex;
   flex-direction: column;
-  align-content: center;
+  align-items: center;
 }
 .Card-headder{
   color: rgba(255, 255, 255, 0.596) !important;
